[tool.poetry]
name = "pythonaudio"
version = "0.1.0"
description = ""
authors = ["Radzihowski <a.radzihovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
openai = "^1.78.1"
pydub = "^0.25.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
